Fixed menu not showing for smaller phones

--- a/net_budget/src/components/UI/NavBar/CollapseSideBar/CollapseSideBar.css
+++ b/net_budget/src/components/UI/NavBar/CollapseSideBar/CollapseSideBar.css
@@ -26,12 +26,16 @@
 .openSideBar {
     float: right;
     height: 50px;
-    padding: 0px 20px 0px 0px;
+    padding: 0px;
     cursor: pointer;
 }
 
 /* tablets */
-@media only screen and (min-width: 600px) {}
+@media only screen and (min-width: 600px) {
+    .openSideBar {
+        padding: 0px 20px 0px 0px;
+    }
+}
 
 /* desktop */
 @media only screen and (min-width: 900px) {
