--- a/net_budget/src/components/UI/NavBar/NavBar.css
+++ b/net_budget/src/components/UI/NavBar/NavBar.css
@@ -8,7 +8,7 @@
 .logo {
     float: left;
     height: 55px;
-    padding: 0px 20px 0px 10px;
+    padding: 0px 5px 0px 10px;
 }
 
 .logout {
@@ -18,7 +18,7 @@
 .navbar h2 {
     float: left;
     margin: 0px;
-    padding: 0px 20px 0px 0px;
+    padding: 0px;
     font-size: 3rem;
     color: white;
 }
@@ -49,6 +49,14 @@
 @media only screen and (min-width: 600px) {
     .navbar {
         width: 100%;
+    }
+
+    .logo {
+        padding: 0px 20px 0px 10px;
+    }
+
+    .navbar h2 {
+        padding: 0px 20px 0px 0px;
     }
 
     .navbarLink {
